/*
 * $Id: ChangeLog,v 1.5712 2007/09/22 07:21:24 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-09-22 13:46 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * include/hbcomp.h
  * source/compiler/harbour.c
    ! Use hb_compGetDebugInfo() to collect stopline info for debugger
      after all optimizations instead of collecting it dynamically and
      not respecting optimizations. Based on Harbour code by Przemyslaw
      Czerpak.

2007-09-22 14:00 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
  * source/vm/estack.c
    ! missing correction on hb_stack_ready due to recent change

2007-09-22 14:00 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
  * source/rtl/set.c
    ! missing correction on hb_set due to recent change

2007-09-22 13:35 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
  * include/hbset.h
    ! improper qualifier for global variables:
      extern HB_EXPORT HB_SET_STRUCT hb_set -> extern HB_SET_STRUCT hb_set

2007-09-22 12:35 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
  * source/rdd/dbcmd.c
    ! fix compile error in MT mode when HB_API_MACROS and HB_STACK_MACROS

  * source/compiler/gen.c
    + "include hbapierr.h" to output file when compiling prg with /gc3 switch

  * include/hbstack.h
    ! improper qualifier for global variable:
      extern HB_EXPORT BOOL hb_stack_ready -> extern BOOL hb_stack_ready

  * include/thread.h
    ! improper qualifier for global variables:
      extern HB_EXPORT BOOL hb_vm_bQuitRequest -> extern BOOL hb_vm_bQuitRequest

  * include/hbtrace.h
    ! improper qualifier for global variables:
      extern HB_EXPORT char * hb_tr_file_  -> extern char * hb_tr_file_
      extern HB_EXPORT int    hb_tr_line_  -> extern int    hb_tr_line_
      extern HB_EXPORT int    hb_tr_level_ -> extern int    hb_tr_level_

      /*
        NOTE: