@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.5712 2007/09/22 07:21:24 andijahja Exp $
+ * $Id: ChangeLog,v 1.5713 2007/09/22 09:49:16 likewolf Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2007-09-22 17:55 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
+  * source/rtl/set.c
+    ! minor formating, hb_set*() -> hb_set*( void ) - Thanks Przemek
 
 2007-09-22 13:46 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
   * include/hbcomp.h
